# game

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  assets.sh  astro.config.mjs  astro.config.ts  biome.json  build.sh  bun.lockb  dev.sh  docker-compose.yml  package.json  pnpm-lock.yaml  rustfmt.toml  server.html  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: workflow.yml
axum_thiserror/: Cargo.toml
axum_thiserror/src/: lib.rs
knuckle_core/: Cargo.toml
knuckle_core/src/: ice_servers.rs  main.rs
knuckle_core/src/routes/: submit_game.rs  websocket.rs
lib_knuckle/: Cargo.toml
lib_knuckle/src/: api_interfaces.rs  dice.rs  game.rs  keys.rs  lib.rs  shift_columns.rs  tests.rs  wasm.rs
lib_knuckle/src/utils/: knucklebones_points.rs  mod.rs  now_impl.rs  occurrences.rs  signing_helpers.rs
que/: Cargo.toml  docker-compose.yml
que/src/: database.rs  embed.rs  ice_servers.rs  main.rs  pool_extractor.rs
que/src/routes/: leader_board.rs  mod.rs  set_name.rs  signup.rs  submit_game.rs  websocket.rs
sprites/: background.aseprite  close.aseprite  deck-bg.aseprite  dice-bg.aseprite  dices.aseprite  end-texts.aseprite  ending.aseprite  favicon.aseprite  name.aseprite  number-base.aseprite  options.aseprite  private-btns.aseprite  save.aseprite  start-again.aseprite  start-bg.aseprite  start-btn.aseprite  start.aseprite  turns.aseprite  user.aseprite  waiting.aseprite
src/: Game.svelte  app.d.ts  app.html  env.d.ts  global.css  hooks.server.js
src/icons/dices/: Dice0.svelte  Dice1.svelte  Dice2.svelte  Dice3.svelte  Dice4.svelte  Dice5.svelte  Dice6.svelte
src/lib/: eventEmitter.js  game.d.ts  game.js  index.ts  libKnuckleBones.ts  rng.ts  util.ts
src/lib/components/: Dice.svelte
src/lib/peer/: lite.d.ts  lite.js
src/pages/: index.astro
src/routes/: +layout.svelte  +page.svelte  Game.svelte
testing/: bot.ts  generateTestData.ts
