[workspace]
resolver = "2"
members = ["lib_knuckle", "que"]

[profile.release-wasm]
inherits = "release"
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1

[workspace.dependencies]
base64 = "0.22.1"
ed25519 = "2.2.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand_core = "0.6.4"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
getrandom = { version = "0.2" }
