[package]
name = "lib_knuckle"
version = "0.1.0"
edition = "2021"


[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
ed25519 = "2.2.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
getrandom = { version = "0.2" }
cfg-if = "1.0.0"

wasm-bindgen = { version = "0.2.93", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }

[features]
default = ["wasm"]
wasm = ["getrandom/js", "dep:wasm-bindgen", "dep:serde-wasm-bindgen"]


[lib]
crate-type = ["cdylib"]
