[package]
name = "lib_knuckle"
version = "0.1.0"
edition = "2021"


[dependencies]
base64.workspace = true
ed25519.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
serde.workspace = true
getrandom.workspace = true

cfg-if = "1.0.0"
rand = "0.8.5"

# Wasm Only
wasm-bindgen = { version = "0.2.93", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
bincode = { version = "1.3.3", optional = true }
tsify = { version = "0.4.5", optional = true }
uuid = { version = "1.10.0", features = ["serde"] }

[features]
default = ["wasm"]
wasm = [
    "getrandom/js",
    "dep:wasm-bindgen",
    "dep:serde-wasm-bindgen",
    "dep:bincode",
    "dep:tsify",
]
debug = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "lib"]
