[package]
name = "que"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-embed = "0.1.0"
base64 = "0.22.1"
dashmap = { version = "6.0.1", features = ["serde"] }
ed25519 = "2.2.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures = "0.3.30"
http = "1.1.0"
mime_guess = "2.0.5"
rand_core = "0.6.4"
rust-embed = "8.5.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
socketioxide = "0.14.1"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
lib_knuckle = { path = "../lib_knuckle", default-features = false }

bb8 = "0.7.1"
bb8-redis = "0.14.0"
redis = "0.24.0"

tracing-subscriber = { version = "0.3.18", features = [
    "parking_lot",
    "once_cell",
    "tracing",
    "env-filter",
] }
tracing = "0.1.40"
tower-http = { version = "0.5.2", features = ["cors"] }
