[package]
name = "que"
version = "0.1.0"
edition = "2021"

[dependencies]
base64.workspace = true
ed25519.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
getrandom.workspace = true

axum = { version = "0.7.5", features = ["ws"] }
futures = "0.3.30"
http = "1.1.0"
mime_guess = "2.0.5"
rust-embed = "8.5.0"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
lib_knuckle = { path = "../lib_knuckle", default-features = false }

bb8 = "0.7.1"
bb8-redis = "0.14.0"
redis = "0.24.0"

tracing-subscriber = { version = "0.3.18", features = [
    "parking_lot",
    "once_cell",
    "tracing",
    "env-filter",
] }
tracing = "0.1.40"
tower-http = { version = "0.5.2", features = ["cors"] }
