[package]
name = "que"
version = "0.1.0"
edition = "2021"

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
getrandom.workspace = true

axum = { version = "0.7.5", features = ["macros", "ws"] }
futures = "0.3.30"
http = "1.1.0"
mime_guess = "2.0.5"
rust-embed = "8.5.0"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["serde", "v4", "v7"] }
lib_knuckle = { path = "../lib_knuckle", default-features = false, version = "0.1.0" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tower-http = { version = "0.5.2", features = ["cors"] }

tokio-postgres = { version = "0.7.11", features = ["with-uuid-1"] }
bb8-postgres = "0.8.1"
bb8 = "0.8.5"
async-trait = "0.1.82"
thiserror = "1.0.63"
axum_thiserror = "0.1.0"
dashmap = { version = "6.1.0", features = ["serde"] }
reqwest = { version = "0.12.7", default-features = false, features = [
    "gzip",
    "h2",
    "trust-dns",
    "json",
    "rustls-tls-native-roots",
] }
clap = { version = "4.5.17", features = ["derive", "env", "cargo"] }
dotenv_rs = { version = "0.16.1" }
strum_macros = "0.26.4"
strum = "0.26.3"